edition = "2023";

option go_package = "keeper/internal/proto/v1/model";

package keeper.go.grpc.v1.model;
import "google/protobuf/go_features.proto";
option features.(pb.go).api_level = API_OPAQUE;

message DeleteSecretRequest {
  string token = 1;
  string path = 2;
}

message UndeleteSecretRequest {
  string token = 1;
  string path = 2;
  int64 version = 3;
}

message DeleteSecretResponse {
  string message = 1;
}