edition = "2023";

option go_package = "keeper/internal/proto/v1/model";

package keeper.go.grpc.v1.model;

import "google/protobuf/timestamp.proto";

message WriteSecret {
  string token = 1;
  string path = 2;
  google.protobuf.Timestamp expired_at  = 3;
  string description = 4;
  bytes value = 5;
}

message SaveSecretResponse {
  bool success = 1;
  string message = 2;
}

message SecretResponse {
  string path = 2;
  google.protobuf.Timestamp expired_at  = 3;
  string description = 4;
  bytes value = 5;
  int64 version  = 6;
  google.protobuf.Timestamp deleted_at  = 7;
  google.protobuf.Timestamp created_at  = 8;
}